# kamilrybacki.github.io

./: .eleventy.js  .eslintignore  .eslintrc  .gitattributes  .gitignore  DEPLOYMENT.md  README.md  STYLEGUIDE.md  TODO.md  _config.yml  astro.config.mjs  deploy-test.sh  filter_branches.sh  gatsby-browser.js  gatsby-config.js  gatsby-config.ts  gatsby-node.js  gatsby-ssr.js  graphql-types.ts  markdownlint.json  mypy.ini  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.js  tsconfig.json
.astro/: types.d.ts
.github/workflows/: build-jupyterlite.yaml  code-quality.yaml  deploy-jupyterlite.yaml  deploy-site.yml  deploy.yml  linting.yaml  markdown-syntax.yaml  page-source-linting.yaml  trigger-deployment.yml
_data/: menus.yml
_includes/: header.html
_posts/: 2022-04-22-welcome.markdown
api/contents/: all.json
assets/templates/: post.mdx  project.mdx
content/articles/: test.mdx
content/poems/: 1.mdx
content/posts/: first_post.mdx  test.mdx  test2.mdx
content/projects/: diffcache.mdx  etmal.mdx  homepose.mdx  test3.mdx  this.mdx  this_site.mdx
jupyterlite/: README.md  deploy.sh  hide_topbar.css  jupyter-lite.json  overrides.json  patch.py  requirements.txt
jupyterlite/extensions/: README.md
jupyterlite/extensions/notebook_content_load_notify/: .eslintignore  .prettierignore  LICENSE  README.md  RELEASE.md  install.json  package.json  pyproject.toml
jupyterlite/extensions/notebook_content_load_notify/notebook_content_load_notify/: __init__.py
jupyterlite/extensions/notebook_content_load_notify/src/: index.ts
jupyterlite/extensions/notebook_content_load_notify/style/: base.css
jupyterlite/patches/: README.md  operations.json
jupyterlite/static/: pyodide-0.26.1.tar.bz2
pages/: projects.html
public/: article-filters.js  index.html  jupyter-lite.json  main.js  post.js  pre.js  theme.js
public/assets/: image-thumbs.json  site.css
public/notebooks/: index.html
scripts/: audit-images.js  generate-thumbnails.js
src/: index.njk  types.ts
src/_layouts/: article.njk  base.njk
src/components/: Contact.astro  ContactEntry.astro  Contacts.astro  Menu.astro  PostsViewer.tsx  ProjectModal.astro  ProjectTechs.astro  ProjectsViewer.astro  ProjectsViewer.tsx  SiteFooter.astro  SiteHeader.astro  SocialShareBar.astro  SplashDecoration.astro  StyledSVG.astro
src/content/: README.md  config.ts
src/layouts/: BasicPageLayout.astro  BlogPostLayout.tsx  DefaultLayout.tsx  PostLayout.astro  ProjectEntryLayout.tsx  ProjectLayout.astro
src/pages/: 404.tsx  about.tsx  blog.astro  contact.tsx  index.astro  index.tsx  posts.astro  posts.tsx  projects.astro  (+1 more)
(+208 files in other folders)
